--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ nav.logo{
 
 .navbar-menu a{
   text-decoration: none;
-  color: #120505;
+  color: #fff;
   margin: 12px;
   padding:8px;
   font-size: 16px;
