--- a/css/style.css
+++ b/css/style.css
@@ -65,141 +65,59 @@ nav.logo{
 }
 
 .navbar-line {
-  width: 100%; /* Makes the line span the full width of its container */
-  height: 2px; /* The thickness of the line */
-  background-color: black;/* Color of the line */
+  width: 100%; 
+  height: 2px; 
+  background-color: black;
 }
 .navbar-menu li {
 position: relative;
 }
 
+.navbar-menu li {
+  position: relative;
+}
+
 .navbar-menu .dropdown {
-display: none; /* Hide the dropdown by default */
-position: absolute;
-top: 100%;
-left: 0;
-background-color: #fff;
-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  padding: 0px;
+  z-index: 10;
+  width: 200px;
 }
 
-.navbar-menu li:hover .dropdown {
-display: block; /* Show the dropdown on hover */
+.navbar-menu li:hover > .dropdown {
+  display: block;
 }
 
 .navbar-menu .dropdown li {
-display: block;
-
+  display: block;
+  text-align: start;
+  margin: 5px;
 }
 
-.navbar-menu .dropdown a {
-color: #333;
-padding: 0;
-text-decoration: none;
+.navbar-menu .dropdown li a {
+  color: #333;
+  padding: 5px 0;
+  text-decoration: none;
+  display: block;
+  font-size: 14px;
+  font-weight: 400;
 }
 
-.navbar-menu .dropdown a:hover {
-background-color: #21E7B7;
-color: #fff;
+.navbar-menu .dropdown li a:hover {
+  background-color: #21E7B7;
+  color: #fff;
 }
-/* Style for nested dropdown */
+
 .navbar-menu .dropdown .dropdown {
-display: none; /* Hide nested dropdown by default */
-position: absolute;
-left: 100%;
-top: 0;
-}
-
-.navbar-menu .dropdown > li:hover .dropdown {
-display: block;
-}
-
-.navbar-menu .dropdown li {
-position: relative;
-}
-
-.navbar-menu .dropdown a {
-color: #333;
-padding: 8px 12px;
-text-decoration: none;
-}
-
-.navbar-menu .dropdown a:hover {
-background-color: #21E7B7;
-color: #fff;
-}
-
-/* For tablets (768px and below) */
-@media (max-width: 768px) {
-  .navbar {
-    padding: 10px;
-    height: auto;
-  }
-  
-  .navbar-menu ul {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 10px;
-    margin: 0;
-  }
-  
-  .navbar-menu li {
-    margin: 8px 0;
-  }
-  
-  .navbar-menu a {
-    font-size: 14px;
-    padding: 6px;
-  }
-  
-  .navbar-menu .dropdown {
-    position: static;
-    box-shadow: none;
-  }
-  
-  .navbar-menu li:hover .dropdown {
-    display: block;
-  }
-  
-  .navbar-menu .dropdown a {
-    font-size: 14px;
-  }
-}
-
-/* For mobile devices (576px and below) */
-@media (max-width: 576px) {
-  .navbar {
-    padding: 8px;
-  }
-
-  .navbar-menu ul {
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-  }
-
-  .navbar-menu li {
-    margin: 6px 0;
-  }
-  
-  .navbar-menu a {
-    font-size: 12px;
-    padding: 5px;
-  }
-  
-  .navbar-menu .dropdown {
-    position: static;
-    width: 100%;
-    box-shadow: none;
-  }
-  
-  .navbar-menu .dropdown a {
-    padding: 10px;
-    font-size: 12px;
-  }
-  
-  .navbar-menu li:hover .dropdown {
-    display: block;
-  }
+  top: 0;
+  left: 100%;
+  margin-left: 10px;
+  width: 180px;
 }
 
 /* For extra small devices (375px and below) */
